[package]
name = "docs"
version = "0.1.0"
edition = "2024"
metadata.workspace = true

[dependencies]
momenta = { path = "../momenta", features = ["wasm"] }
wasm-bindgen = { version = "0.2" }

# Build script for wasm-opt
[package.metadata.wasm-pack]
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",                      # Aggressive size optimization
    "--enable-bulk-memory",     # Enable bulk memory operations
    "--enable-sign-ext",        # Enable sign extension
    "--enable-mutable-globals",
    "--zero-filled-memory",     # Zero-filled memory optimization
    "--strip-debug",            # Remove debug info
    "--strip-producers",        # Remove producers section
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory"]
