[package]
name = "momenta-macros"
version = "0.2.0"
edition = "2024"
description = "Procedural macros for momenta, providing JSX-like syntax for Rust"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/momenta"
keywords = ["jsx", "macros", "proc-macro", "syntax", "html"]
categories = ["development-tools::procedural-macro-helpers", "template-engine"]
documentation = "https://docs.rs/momenta-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
regex = "1.11"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
momenta = { path = "../momenta", version = "0.2.0" }
