[package]
name = "simple-rsx-macros"
version = "0.1.7"
edition = "2024"
description = "Procedural macros for simple-rsx, providing JSX-like syntax for Rust"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/simple-rsx"
keywords = ["jsx", "macros", "proc-macro", "syntax", "html"]
categories = ["development-tools::procedural-macro-helpers", "template-engine"]
documentation = "https://docs.rs/simple-rsx-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
regex = "1.11"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
simple-rsx = { path = "../simple-rsx", version = "0.1.6" }
