[package]
name = "simple-rsx"
version = "0.1.8"
edition = "2024"
description = "A simple JSX-like syntax implementation for Rust"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/simple-rsx"
keywords = ["jsx", "react", "template", "markup", "html"]
categories = ["template-engine", "web-programming"]
documentation = "https://docs.rs/simple-rsx"

[dependencies]
indexmap = "2.9"
paste = "1.0"
simple-rsx-macros = { path = "../simple-rsx-macros", version = "0.1.8" }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Event",
] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = ["wasm"]
bare = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
